--- a/somno.vcxproj.filters
+++ b/somno.vcxproj.filters
@@ -56,4 +56,7 @@
       <Filter>forms\Header Files</Filter>
     </CustomBuild>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="README.md" />
+  </ItemGroup>
 </Project>
